--- a/index.html
+++ b/index.html
@@ -411,9 +411,102 @@
                             <p style="font-size: 12px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
                     </div>
-                    
                 </div>
 
+                <div class="row">
+                    <div class="col-7">
+                        <img src="images/640x360.png" class="p-3 card-img img-fluid" style="height:100%;" alt="image">
+                    </div>
+                    <div class="col-5">
+                        <div class="row">
+                                <img src="images/640x360.png" class="p-3 card-img img-fluid" style="height:100%;" alt="image">
+                        </div> 
+                        <div class="row">
+                                <img src="images/640x360.png" class="p-3 card-img img-fluid" style="height:100%;" alt="image">
+                        </div> 
+                    </div>
+                </div>
+
+                <div class="p-3">
+                        <div class="row no-gutters">
+                                <div class="col-md-4">
+                                    <img src="images/image.png" class="p-3 card-img img-fluid" style="width:100%;" alt="image">
+                                </div>
+                                <div class="col-md-8">
+                                    <p style="font-size: 10px;">Lorem ipsum</p>
+                                    <p><h3>Lorem Ipsum Dolor Sit Amet</h3></p>
+                                    <p style="font-size: 12px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                </div>
+                            </div>
+                </div>
+
+                <div class="card p-3">
+                        <div class="row">
+                                <div class="col-4">
+                                    <img src="images/640x360.png" class="rounded" style="width:100%">
+                                    <div class="p-2">
+                                        <p style="font-size: 12px;">Lorem ipsum</p>
+                                        <p><h4>Lorem Ipsum Dolor Sit Amet</h4></p>
+                                    </div>
+                                </div>
+                                <div class="col-4">
+                                        <img src="images/640x360.png" class="rounded" style="width:100%">
+                                        <div class="p-2">
+                                            <p style="font-size: 12px;">Lorem ipsum</p>
+                                            <p><h4>Lorem Ipsum Dolor Sit Amet</h4></p>
+                                        </div>
+                                </div>
+                                <div class="col-4">
+                                        <img src="images/640x360.png" class="rounded" style="width:100%">
+                                        <div class="p-2">
+                                            <p style="font-size: 12px;">Lorem ipsum</p>
+                                            <p><h4>Lorem Ipsum Dolor Sit Amet</h4></p>
+                                        </div>
+                                </div>
+                            </div>
+                </div>
+                <div class="p-3">
+                        <div class="row no-gutters">
+                                <div class="col-md-4">
+                                    <img src="images/image.png" class="p-3 card-img img-fluid" style="width:100%;" alt="image">
+                                </div>
+                                <div class="col-md-8">
+                                    <p style="font-size: 10px;">Lorem ipsum</p>
+                                    <p><h3>Lorem Ipsum Dolor Sit Amet</h3></p>
+                                    <p style="font-size: 12px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                </div>
+                            </div>
+                            <div class="row no-gutters">
+                                <div class="col-md-4">
+                                    <img src="images/image.png" class="p-3 card-img img-fluid" style="width:100%;" alt="image">
+                                </div>
+                                <div class="col-md-8">
+                                    <p style="font-size: 10px;">Lorem ipsum</p>
+                                    <p><h3>Lorem Ipsum Dolor Sit Amet</h3></p>
+                                    <p style="font-size: 12px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                </div>
+                            </div>
+                            <div class="row no-gutters">
+                                <div class="col-md-4">
+                                    <img src="images/image.png" class="p-3 card-img img-fluid" style="width:100%;" alt="image">
+                                </div>
+                                <div class="col-md-8">
+                                    <p style="font-size: 10px;">Lorem ipsum</p>
+                                    <p><h3>Lorem Ipsum Dolor Sit Amet</h3></p>
+                                    <p style="font-size: 12px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                </div>
+                            </div>
+                            <div class="row no-gutters">
+                                <div class="col-md-4">
+                                    <img src="images/image.png" class="p-3 card-img img-fluid" style="width:100%;" alt="image">
+                                </div>
+                                <div class="col-md-8">
+                                    <p style="font-size: 10px;">Lorem ipsum</p>
+                                    <p><h3>Lorem Ipsum Dolor Sit Amet</h3></p>
+                                    <p style="font-size: 12px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                </div>
+                            </div>
+                </div>
                 </div>
 
                 
