--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">  
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="main.css">
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -204,7 +203,7 @@
                             </div>
                     </div>
                 </div>
-                <div class="card col-4">
+                <div class="col-4">
                     <p class="mt-3 font-weight-bold">TOPIK POPULER</p>
                     <p><span style="color: orangered;"># </span><a class="text-decoration-none" style="color: black;" href="">BCLXRESORTSWORLDSENTOSA</a></p>
                     <p><span style="color: orangered;"># </span><a class="text-decoration-none" style="color: black;" href="">SHOPEE LIGA 1</a></p>
@@ -218,7 +217,31 @@
                         <img src="images/300x300.png" style="width:100%">
                         <h5 class="m-2">Live Streaming Dear Netizen</h5>
                     </div>
+                    <div class="m-1 align-self-center">
+                        <div class="card m-2">
+                            <p class="font-weight-bold m-2">JADWAL ACARA HARI INI</p>
+                            <div class="tabbable">
+                                <ul class="nav nav-tabs">
+                                  <li class="active col-5 mb-2"><a href="#tab1" data-toggle="tab"><img class="float-left d-flex w-75" style="height: 100%;" src="images/sctv1.jpg"></a></li>
+                                  <li class="col-5 mb-2"><a href="#tab2" data-toggle="tab"><img class="float-right d-flex w-50" style="height: 100%;" src="images/indosiar.png"></a></li>
+                                </ul>
+                                <div class="tab-content">
+                                  <div class="tab-pane active m-2" id="tab1">
+                                    <p><span class="font-weight-bold">00.00 </span>  <a class="text-decoration-none" style="color: black" href="">Cinta Karena Cinta</a></p>
+                                    <p><span class="font-weight-bold">00.59 </span>  <a class="text-decoration-none" style="color : black" href="">Tidak Cinta Karena Tidak Cinta</a></p>
+                                  </div>
+                                  <div class="tab-pane m-2" id="tab2">
+                                    <p><span class="font-weight-bold">00.00 </span>  <a class="text-decoration-none" href="">Spongebob & UpinIpin</a></p>
+                                  </div>
+                                </div>
+                                <div class="align-self-center">
+                                <button class="ml-3 mr-3 btn" style="color: orangered;">SELENGKAPNYA</button>
+                                </div>
+                              </div>
+                        </div>
+                    </div>
                 </div>
+                
             </div>    
         </div>
     </body>
