--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                 </div>
 
                 
-                <div class=" card col-4">
+                <div class="col-4">
                     <p class="mt-3 font-weight-bold">TOPIK POPULER</p>
                     <p><span style="color: orangered;"># </span><a class="text-decoration-none" style="color: black;" href="">BCLXRESORTSWORLDSENTOSA</a></p>
                     <p><span style="color: orangered;"># </span><a class="text-decoration-none" style="color: black;" href="">SHOPEE LIGA 1</a></p>
@@ -518,6 +518,34 @@
                     <p><span style="color: orangered;"># </span><a class="text-decoration-none" style="color: black;" href="">SUHU PANAS</a></p>
                     <p><span style="color: orangered;"># </span><a class="text-decoration-none" style="color: black;" href="">INDONESIA TUAN RUMAH PIALA DUNIA U-20</a></p>
                     <p><span style="color: orangered;"># </span><a class="text-decoration-none" style="color: black;" href="">PODCAST LIPUTAN6</a></p>
+                <div class="card m-1 align-self-center">
+                    <h4 class="m-2">LIVE STREAMING</h4>
+                    <img src="images/300x300.png" style="width:100%">
+                    <h5 class="m-2">Live Streaming Dear Netizen</h5>
+                </div>
+                    <div class="m-1 align-self-center">
+                        <div class="card m-2">
+                            <p class="font-weight-bold m-2">JADWAL ACARA HARI INI</p>
+                            <div class="tabbable">
+                                <ul class="nav nav-tabs">
+                                  <li class="active col-5 mb-2"><a href="#tab1" data-toggle="tab"><img class="float-left d-flex w-75" style="height: 100%;" src="images/sctv1.jpg"></a></li>
+                                  <li class="col-5 mb-2"><a href="#tab2" data-toggle="tab"><img class="float-right d-flex w-50" style="height: 100%;" src="images/indosiar.png"></a></li>
+                                </ul>
+                                <div class="tab-content">
+                                  <div class="tab-pane active m-2" id="tab1">
+                                    <p><span class="font-weight-bold">00.00 </span>  <a class="text-decoration-none" style="color: black" href="">Cinta Karena Cinta</a></p>
+                                    <p><span class="font-weight-bold">00.59 </span>  <a class="text-decoration-none" style="color : black" href="">Tidak Cinta Karena Tidak Cinta</a></p>
+                                  </div>
+                                  <div class="tab-pane m-2" id="tab2">
+                                    <p><span class="font-weight-bold">00.00 </span>  <a class="text-decoration-none" href="">Spongebob & UpinIpin</a></p>
+                                  </div>
+                                </div>
+                                <div class="align-self-center">
+                                <button class="ml-3 mr-3 btn" style="color: orangered;">SELENGKAPNYA</button>
+                                </div>
+                              </div>
+                        </div>
+                    </div>
                 </div>
                 
             </div>    
